[package]
name = "find-real-roots-of-polynomial"
version = "0.2.2"
authors = ["Toru3 <ryuutet@gmail.com>"]
edition = "2018"
description = "find all real roots of a polynomial"
license = "AGPL-3.0-or-later"
documentation = "https://docs.rs/find-real-roots-of-polynomial"
repository = "https://gitlab.com/Toru3/find-real-roots-of-polynomial"
readme = "README.md"
keywords = ["algebra", "polynomial", "root-finding"]
categories = ["algorithms", "mathematics"]

[dependencies]
polynomial-ring = "0.5.0"
num-traits = "0.2.18"
[dev-dependencies]
rand = "0.8.5"
num = "0.4.1"
[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex.html",
]
